# scaffold-stellar

./: .gitignore  404.html  CLAUDE.md  CNAME  CONTRIBUTING.md  Cargo.toml  README.md  WINDOWS.md  blog.html  check-shell.sh  deploy_registry.sh  index.html  justfile  rust-toolchain.toml  sitemap.xml
.cargo/: config.toml
.config/: nextest.toml
.githooks/: pre-commit
.github/: dependabot.yml  registry-quorum.yml
.github/ISSUE_TEMPLATE/: registry-admin.yml  registry-deploy.yml  registry-publish.yml  (+1 more)
blog/: archive.html  atom.xml  authors.html  hello-soroban.html  hello-stellar.html  index.html  rss.xml  tags.html
contracts/hello/: Cargo.toml
contracts/hello/src/: lib.rs
contracts/registry/: .salt  ARCHITECTURE.md  Cargo.toml  README.md  deploy.sh  deploy_initial_registries.sh  initial_batch.json  initial_contracts.json
contracts/registry-tansu-manager/: Cargo.toml  e2e-testnet.sh
contracts/registry-tansu-manager/src/: lib.rs  test.rs
contracts/registry/src/: alloc.rs  error.rs  events.rs  lib.rs  metadata.rs  name.rs  registry.rs  storage.rs  test.rs  util.rs  version.rs
contracts/registry/src/name/: normalized.rs  to_str.rs
contracts/registry/src/registry/: contract.rs  wasm.rs
contracts/registry/src/storage/: maps.rs
contracts/registry/src/test/: batch.rs  contracts.rs  manageable.rs  names.rs  registry.rs  unverified.rs  util.rs  verified.rs
contracts/test/asset_test/: Cargo.toml
contracts/test/asset_test/src/: lib.rs  test.rs
contracts/test/hello_world_v2/: Cargo.toml
contracts/test/hello_world_v2/src/: lib.rs
contracts/test/tansu-stub/: Cargo.toml
contracts/test/tansu-stub/src/: lib.rs
crates/stellar-build/: CHANGELOG.md  Cargo.toml
crates/stellar-build/src/: deps.rs  lib.rs  networks.rs
crates/stellar-registry/: CHANGELOG.md  Cargo.toml  README.md
crates/stellar-registry-build/: CHANGELOG.md  Cargo.toml  README.md
crates/stellar-registry-build/src/: contract.rs  error.rs  lib.rs  named_registry.rs  networks.rs  registry.rs
crates/stellar-registry-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/stellar-registry-cli/src/: contract.rs  github.rs  lib.rs
crates/stellar-registry-cli/src/commands/: batch_register.rs  create_alias.rs  current_version.rs  deploy.rs  deploy_unnamed.rs  download.rs  fetch.rs  fetch_contract_id.rs  fetch_hash.rs  global.rs  install.rs  mod.rs  process_batch.rs  publish.rs  publish_hash.rs  register_contract.rs  rename_contract.rs  update_contract_address.rs  update_contract_owner.rs  upgrade.rs  version.rs
crates/stellar-registry-cli/src/commands/deploy/: util.rs
crates/stellar-registry-cli/src/testnet/: mod.rs
crates/stellar-registry/src/: lib.rs
crates/stellar-scaffold-cli/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/stellar-scaffold-cli/examples/soroban/wallet/: Cargo.toml
crates/stellar-scaffold-cli/src/: arg_parsing.rs  extension.rs  lib.rs
crates/stellar-scaffold-cli/src/arg_parsing/: parser.rs
crates/stellar-scaffold-cli/src/commands/: clean.rs  init.rs  mod.rs  upgrade.rs  version.rs
crates/stellar-scaffold-cli/src/commands/dev/: mod.rs
crates/stellar-scaffold-cli/src/commands/ext/: ls.rs  mod.rs
crates/stellar-scaffold-cli/src/commands/generate/: mod.rs
crates/stellar-scaffold-cli/src/commands/generate/contract/: mod.rs  wizard_config.json
crates/stellar-scaffold-cli/src/commands/watch/: mod.rs
crates/stellar-scaffold-cli/src/examples/soroban/status_message/: Cargo.toml.remove
crates/stellar-scaffold-cli/tests/: unit.rs
crates/stellar-scaffold-cli/tests/fixtures/soroban-init-boilerplate/contracts/auth/: Cargo.toml
crates/stellar-scaffold-cli/tests/fixtures/soroban-init-boilerplate/contracts/custom_types/: Cargo.toml
crates/stellar-scaffold-cli/tests/it/: examples.rs  main.rs  unit.rs  util.rs
crates/stellar-scaffold-cli/tests/it/build_clients/: accounts.rs  contracts.rs  dev.rs  docker.rs  examples.rs  init_script.rs  mod.rs  network.rs  watch.rs
crates/stellar-scaffold-cli/tests/it/features/: clean.rs  extensions.rs  mod.rs  reporter.rs  watch.rs
crates/stellar-scaffold-ext-types/: CHANGELOG.md  Cargo.toml  README.md
crates/stellar-scaffold-ext-types/src/: lib.rs
crates/stellar-scaffold-macro/: CHANGELOG.md  Cargo.toml  README.md
crates/stellar-scaffold-macro/src/: asset.rs  lib.rs
crates/stellar-scaffold-macro/src/asset/: args.rs
crates/stellar-scaffold-macro/tests/: test.rs
crates/stellar-scaffold-reporter/: CHANGELOG.md  Cargo.toml  README.md
crates/stellar-scaffold-reporter/src/: lib.rs  main.rs  report.rs  state.rs
crates/stellar-scaffold-reporter/tests/: integration.rs
crates/stellar-scaffold-test/: Cargo.toml
crates/stellar-scaffold-test/fixtures/contracts/hello_v1/: Cargo.toml
crates/stellar-scaffold-test/fixtures/contracts/hello_v1/src/: lib.rs
crates/stellar-scaffold-test/fixtures/contracts/hello_v2/: Cargo.toml
crates/stellar-scaffold-test/fixtures/contracts/hello_v2/src/: lib.rs
crates/stellar-scaffold-test/fixtures/soroban-init-boilerplate/: .env.example  .gitignore  Cargo.toml  README.md  initialize.js  package.json
crates/stellar-scaffold-test/fixtures/soroban-init-boilerplate/contracts/auth/: Cargo.toml
crates/stellar-scaffold-test/fixtures/soroban-init-boilerplate/contracts/custom_types/: Cargo.toml
crates/stellar-scaffold-test/fixtures/soroban-init-boilerplate/contracts/hello_world/: Cargo.toml
crates/stellar-scaffold-test/fixtures/soroban-init-boilerplate/contracts/increment/: Cargo.toml
crates/stellar-scaffold-test/fixtures/soroban-init-boilerplate/contracts/token/: Cargo.toml
crates/stellar-scaffold-test/fixtures/soroban-init-boilerplate/contracts/token/src/: contract.rs
crates/stellar-scaffold-test/src/: common.rs  lib.rs  registry.rs
docs/: ci-publishing.md  cli.html  cli.md  deploy.html  deploy.md  docusaurus.config.ts  environments.html  environments.md  intro.html  quick-start.html  registry.html  registry.md
npm/: README.md  package.json
website/: .gitignore  README.md  docusaurus.config.ts  package-lock.json  package.json  resizeImage.js  sidebars.ts
(+251 files in other folders)
