[workspace]
resolver = "2"
default-members = ["crates/*"]
members = [
    "crates/*",
    "contracts/registry",
    "contracts/test/*",
    "crates/stellar-scaffold-test/fixtures/contracts/*",
]

[workspace.package]
repository = "https://github.com/theahaco/scaffold-stellar"

[workspace.dependencies]
stellar-scaffold-macro = { path = "crates/stellar-scaffold-macro" }
stellar-registry = { path = "crates/stellar-registry" }
stellar-scaffold-test = { path = "crates/stellar-scaffold-test" }

stellar-cli = { version = "23.3.0", package = "soroban-cli", default-features = false  }
soroban-rpc = { package = "stellar-rpc-client", version = "23.0.1" }
soroban-spec-tools = "23.1.2"

soroban-sdk = "23.4.0"
admin-sep = { git = "https://github.com/theahaco/admin-sep", rev = "c70aefe12a33fad9cf3188786d47aba086e08d40" }
stellar-xdr = "23.0.0"
stellar-strkey = "0.0.13"

cargo_metadata = "0.18.1"
thiserror = "2.0.17"
sha2 = "0.10.9"

clap = "4.1.8"

[profile.contracts]
inherits = "release"
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = true
panic = "abort"
codegen-units = 1
lto = true

[workspace.lints.clippy]
result_large_err = "allow"
