[workspace]
resolver = "2"
default-members = ["crates/*"]
members = [
    "crates/*",
    "contracts/registry",
    "contracts/test/*",
    "crates/stellar-scaffold-test/fixtures/contracts/*",
]

[workspace.package]
repository = "https://github.com/theahaco/scaffold-stellar"

[workspace.dependencies]
stellar-scaffold-macro = { path = "crates/stellar-scaffold-macro" }
stellar-registry = { path = "crates/stellar-registry" }
stellar-scaffold-test = { path = "crates/stellar-scaffold-test" }

stellar-cli = { version = "25.1.0", package = "soroban-cli", default-features = false }
soroban-rpc = { package = "stellar-rpc-client", version = "25.0.0" }
soroban-spec-tools = "25.1.0"

soroban-sdk = "25.1.0"
admin-sep = { git = "https://github.com/theahaco/admin-sep", rev = "46ed159ff38ee81f4b61b5ddb8ca4b6bdf972028" }
stellar-xdr = "25.0.0"
stellar-strkey = "0.0.15"

cargo_metadata = "0.18.1"
thiserror = "2.0.18"
sha2 = "0.10.9"

clap = "4.5.60"
reqwest = { version = "0.12.9", default-features = false }

[profile.contracts]
inherits = "release"
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = true
panic = "abort"
codegen-units = 1
lto = true

[workspace.lints.clippy]
result_large_err = "allow"
