[package]
name = "hello"
description = "Hello world example contract used by the registry-tansu-manager e2e script."
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[package.metadata.stellar]
cargo_inherit = true
