[package]
name = "registry"
description = "A crate for managing and deploying smart contracts on the Soroban blockchain."
version = "0.1.1"
authors = ["Aha Labs <hello@theaha.co>"]
license = "Apache-2.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
loam-sdk = { workspace = true }
loam-subcontract-core = { workspace = true }
semver = { version = "1.0.26", default-features = false }


[dev-dependencies]
loam-sdk = { workspace = true, features = ["soroban-sdk-testutils"] }
stellar-registry = { workspace = true }
assert_matches = "1.5.0"

[package.metadata.loam]
contract = true

[package.metadata.stellar]
cargo_inherit = true
homepage = "theaha.co"
repository = "https://github.com/theahaco/scaffold-stellar"
