[package]
name = "registry"
description = "A crate for managing and deploying smart contracts on the Soroban blockchain."
version = "0.1.1"
authors = ["The Aha Company <hello@theaha.co>"]
license = "Apache-2.0"
rust-version = "1.69"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { git = "https://github.com/stellar/rs-soroban-sdk", rev = "99134976ee1d31fa1fa5db8a63bd1ea66b8abda8" , features = ["alloc"] }
admin-sep = { git = "https://github.com/theahaco/admin-sep", rev = "0a33529733d790aa6806e8210c30eba2a2b7dfb0" }

semver = { version = "1.0.27", default-features = false }

[dev-dependencies]
soroban-sdk = { git = "https://github.com/stellar/rs-soroban-sdk", rev = "99134976ee1d31fa1fa5db8a63bd1ea66b8abda8" ,  features = ["testutils"] }
stellar-registry = { workspace = true }
assert_matches = "1.5.0"
stellar-xdr = { workspace = true }
hello_world = { path = "../test/hello_world" }
rand = { version = "0.9.2", default-features = false, features = [
    "small_rng",
    "os_rng",
] }


[package.metadata.stellar]
cargo_inherit = true
homepage = "theaha.co"
repository = "https://github.com/theahaco/scaffold-stellar"
