[package]
name = "stellar-build"
version = "0.0.5"
edition = "2024"
description = "A library for gathering Contracts"
license = "Apache-2.0"
repository = "https://github.com/theahaco/scaffold-stellar/tree/main/crates/stellar-build"


[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
topological-sort = "0.2.2"
