[package]
name = "stellar-registry-build"
version = "0.0.5"
edition = "2024"
description = "A library using the registry at build time"
license = "Apache-2.0"
repository = "https://github.com/theahaco/scaffold-stellar/tree/main/crates/stellar-build"


[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stellar-cli = { workspace = true, default-features = false, features = [] }
stellar-build = { path = "../stellar-build", version = "0.0.5" }

soroban-spec-tools = { workspace = true }
soroban-rpc = { workspace = true }
stellar-strkey = { workspace = true }

thiserror = "2.0.17"
tokio = { version = "1", features = ["full"] }
shlex = "1.1.0"
heck = "0.4.1"
ed25519-dalek = "2.2.0"
sha2 = { workspace = true }

dotenvy = "0.15.7"
# soroban-rpc = "=20.3.3"
