[package]
name = "stellar-registry-cli"
description = "Stellar CLI plugin for publishing and deploying contracts"
homepage = "https://github.com/theahaco/scaffold-stellar"
authors = ["Aha Labs <hello@theaha.co>"]
license = "Apache-2.0"
readme = "README.md"
version = "0.0.14"
edition = "2021"
rust-version = "1.70"
autobins = false
repository = "https://github.com/theahaco/scaffold-stellar/tree/main/crates/stellar-registry-cli"

[[bin]]
name = "stellar-registry"
path = "src/bin/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"


[lib]
name = "stellar_registry_cli"
path = "src/lib.rs"
doctest = false

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
clap = { workspace = true, features = [
    "derive",
    "env",
    "deprecated",
    "string",
] }
stellar-cli = { workspace = true, default-features = false, features = [] }

soroban-spec-tools = { workspace = true }
soroban-rpc = { workspace = true }
stellar-strkey = { workspace = true }

thiserror = "1.0.31"
tokio = { version = "1", features = ["full"] }
shlex = "1.1.0"
heck = "0.4.1"
ed25519-dalek = "2.0.0"
sha2 = { workspace = true }

dotenvy = "0.15.7"
# soroban-rpc = "=20.3.3"

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
predicates = "2.1.5"
stellar-scaffold-test = { path = "../stellar-scaffold-test" }

[build-dependencies]
crate-git-revision = "0.0.6"

[features]
default = []
integration-tests = []

[lints]
workspace = true
