[package]
name = "stellar-registry-cli"
description = "Stellar CLI plugin for publishing and deploying contracts"
homepage = "https://github.com/theahaco/scaffold-stellar"
authors = ["Aha Labs <hello@theaha.co>"]
license = "Apache-2.0"
readme = "README.md"
version = "0.0.16"
edition = "2024"
autobins = false
repository = "https://github.com/theahaco/scaffold-stellar/tree/main/crates/stellar-registry-cli"

[[bin]]
name = "stellar-registry"
path = "src/bin/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"


[lib]
name = "stellar_registry_cli"
path = "src/lib.rs"
doctest = false

[dependencies]
clap = { workspace = true, features = [
    "derive",
    "env",
    "deprecated",
    "string",
] }
stellar-cli = { workspace = true, default-features = false, features = [] }
stellar-registry-build = { path = "../stellar-registry-build", version = "0.0.6" }


soroban-spec-tools = { workspace = true }
soroban-rpc = { workspace = true }
stellar-strkey = { workspace = true }

thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
shlex = "1.1.0"
heck = "0.4.1"
ed25519-dalek = "2.2.0"
hex = "0.4"
sha2 = { workspace = true }

dotenvy = "0.15.7"
rand = "0.9.2"
reqwest = { workspace = true }

[dev-dependencies]
stellar-build = { version = "0.0.6", path = "../stellar-build" }
stellar-scaffold-test = { workspace = true }
assert_cmd = "2.1.2"
assert_fs = "1.1.3"
predicates = "3.1.4"

[build-dependencies]
crate-git-revision = "0.0.6"

[features]
default = []
integration-tests = []

[lints]
workspace = true
