[package]
name = "stellar-scaffold-cli"
description = "Stellar CLI plugin for building smart contracts with frontend support"
homepage = "https://github.com/theahaco/scaffold-stellar"
authors = ["Aha Labs <hello@theaha.co>"]
license = "Apache-2.0"
readme = "README.md"
version = "0.0.16"
edition = "2021"
rust-version = "1.70"
autobins = false
repository = "https://github.com/theahaco/scaffold-stellar/tree/main/crates/stellar-scaffold-cli"

[[bin]]
name = "stellar-scaffold"
path = "src/bin/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"


[lib]
name = "stellar_scaffold_cli"
path = "src/lib.rs"
doctest = false

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
stellar-build = { path = "../stellar-build", version = "0.0.4" }
stellar-cli = { workspace = true, features = ["default"] }
soroban-rpc = { workspace = true }
soroban-spec-tools = { workspace = true }
clap = { version = "4.1.8", features = [
    "derive",
    "env",
    "deprecated",
    "string",
] }
degit-rs = "0.2.2"
dialoguer = "0.12.0"
dirs = "6.0.0"
flate2 = "1.0"
tar = "0.4"
cargo_metadata = { workspace = true }
cargo_toml = "0.20"
sha2 = { workspace = true }


reqwest = { version = "0.12.9", features = ["json"] }
thiserror = "2.0.12"
serde = "1.0.82"
serde_json = "1.0.82"

tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
itertools = "0.12.1"
ignore = "0.4"
heck = "0.5.0"
hex = "0.4.3"
shlex = "1.1.0"
toml = { version = "0.8.12", features = ["parse", "preserve_order"] }
rand = "0.8.5"
notify = "8.2.0"
stellar-strkey = { workspace = true }
stellar-xdr = { workspace = true }
regex = "1.10.5"
toml_edit = "0.22.16"
indexmap = { version = "2.9", features = ["serde"] }
tempfile = "3.8"
fs_extra = "1.3"
webbrowser = "1.0.4"

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
predicates = "3.1.3"
walkdir = "2.3"
uuid = { features = ["v4"], version = "1.16.0" }
stellar-scaffold-test = { path = "../stellar-scaffold-test" }
tempfile = "3.8"
mockito = "0.31"

[build-dependencies]
crate-git-revision = "0.0.6"

[features]
integration-tests = []

[lints]
workspace = true
