[package]
name = "stellar-scaffold-cli"
description = "Stellar CLI plugin for building smart contracts with frontend support"
homepage = "https://github.com/theahaco/scaffold-stellar"
authors = ["Aha Labs <hello@theaha.co>"]
license = "Apache-2.0"
readme = "README.md"
version = "0.0.18"
edition = "2024"
autobins = false
repository = "https://github.com/theahaco/scaffold-stellar/tree/main/crates/stellar-scaffold-cli"

[[bin]]
name = "stellar-scaffold"
path = "src/bin/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"


[lib]
name = "stellar_scaffold_cli"
path = "src/lib.rs"
doctest = false

[dependencies]
stellar-build = { path = "../stellar-build", version = "0.0.5" }
stellar-cli = { workspace = true, default-features = false }
soroban-rpc = { workspace = true }
soroban-spec-tools = { workspace = true }
clap = { version = "4.5.51", features = [
    "derive",
    "env",
    "deprecated",
    "string",
] }
degit = { package = "degit-rs", version = "0.2.3" }
dialoguer = "0.12.0"
dirs = "6.0.0"
flate2 = "1.1"
tar = "0.4"
cargo_metadata = { workspace = true }
cargo_toml = "0.22"
sha2 = { workspace = true }


reqwest = { version = "0.12.9", default-features = false, features = [
    "json",
    "rustls-tls",
] }
thiserror = "2.0.17"
serde = "1.0.228"
serde_json = "1.0.145"

tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
itertools = "0.14.0"
ignore = "0.4"
heck = "0.5.0"
hex = "0.4.3"
shlex = "1.1.0"
toml = { version = "0.9", features = ["parse", "preserve_order"] }
rand = "0.8.5"
notify = "8.2.0"
stellar-strkey = { workspace = true }
stellar-xdr = { workspace = true }
regex = "1.12.2"
toml_edit = "0.22.16"
indexmap = { version = "2.12", features = ["serde"] }
tempfile = "3.23"
fs_extra = "1.3"
webbrowser = "1.0.6"

[dev-dependencies]
assert_cmd = "2.1.1"
assert_fs = "1.1.3"
predicates = "3.1.3"
walkdir = "2.3"
uuid = { features = ["v4"], version = "1.18.1" }
stellar-scaffold-test = { path = "../stellar-scaffold-test" }
tempfile = "3.23"
mockito = "0.31"

[build-dependencies]
crate-git-revision = "0.0.6"

[features]
integration-tests = []

[lints]
workspace = true
