[package]
name = "stellar-scaffold-ext-types"
version = "0.0.1"
edition = "2024"
description = "Shared types for stellar-scaffold extension hooks"
license = "Apache-2.0"
repository = "https://github.com/theahaco/scaffold-stellar/tree/main/crates/stellar-scaffold-ext-types"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
