[package]
name = "stellar-scaffold-macro"
version = "0.8.10"
edition = "2024"
description = "Macros needed by stellar-scaffold"
license = "Apache-2.0"
repository = "https://github.com/theahaco/scaffold-stellar/tree/main/crates/stellar-scaffold-macro"

[lib]
proc-macro = true

[dependencies]
stellar-build = { path = "../stellar-build", version = "0.0.5" }
proc-macro2 = "1.0"
syn = { version = "2", features = ["full"] }
quote = "1.0"
stellar-strkey = "0.0.13"
regex = "1.12.2"
stellar-xdr = "23.0.0"
sha2 = "0.10.9"
