[package]
name = "stellar-scaffold-reporter"
description = "Scaffold Stellar plugin for logging development metrics"
homepage = "https://github.com/theahaco/scaffold-stellar"
authors = ["Aha Labs <hello@theaha.co>"]
license = "Apache-2.0"
readme = "README.md"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/theahaco/scaffold-stellar/tree/main/crates/stellar-scaffold-reporter"

[[bin]]
name = "stellar-scaffold-reporter"
path = "src/main.rs"

[dependencies]
stellar-scaffold-ext-types = { path = "../stellar-scaffold-ext-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
