[package]
name = "stellar-scaffold-test"
version = "0.1.0"
edition = "2024"
publish = false
repository.workspace = true

[lints]
workspace = true

[dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
fs_extra = "1.3"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
uuid = { version = "1.0", features = ["v4"] }

soroban-sdk = { workspace = true }
stellar-cli = { workspace = true }
stellar-scaffold-cli = { path = "../stellar-scaffold-cli" }
stellar-registry-cli = { path = "../stellar-registry-cli" }
