[package]
name = "stellar-scaffold-test"
version = "0.1.0"
edition = "2024"
publish = false
repository.workspace = true

[lints]
workspace = true

[dependencies]
assert_cmd = "2.1"
assert_fs = "1.1"
fs_extra = "1.3"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
uuid = { version = "1.18", features = ["v4"] }
clap = { workspace = true }

soroban-sdk = { workspace = true }
stellar-cli = { workspace = true }
stellar-scaffold-cli = { path = "../stellar-scaffold-cli" }
stellar-registry-cli = { path = "../stellar-registry-cli" }
wasm-gen = "0.1.4"

