[package]
name = "stellar-scaffold-test"
version = "0.1.0"
edition = "2024"
publish = false
repository.workspace = true

[lib]
crate-type = ["rlib"]

[lints]
workspace = true

[dependencies]
assert_cmd = "2.1"
assert_fs = "1.1"
reflink-copy = "0.1"
tokio = { version = "1.49", features = ["full"] }
tokio-stream = "0.1"
uuid = { version = "1.21", features = ["v4"] }
clap = { workspace = true }

soroban-sdk = { workspace = true }
stellar-strkey = { workspace = true }
stellar-cli = { workspace = true }
wasm-gen = "0.1.4"
