[workspace]
resolver = "2"
members = [
  "contracts/*",
]

[workspace.package]
edition = "2024"
version = "0.0.0"

[workspace.dependencies]
soroban-sdk = "23.4.0"
soroban-token-sdk = "23.2.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
