[package]
name = "soroban-token-contract"
description = "Soroban standard token contract"
version = "0.0.6"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-token-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }